--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="stylesheet" href="%PUBLIC_URL%/styles/style.css">
-  <title>Airbnb</title>
+  <title>Main</title>
 </head>
 
 <body>
